--- a/recourses/index.css
+++ b/recourses/index.css
@@ -1,7 +1,10 @@
 html {
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+.home {
   background: url(https://1.bp.blogspot.com/-j4GQ1pDOzOA/UDJ70bUbAeI/AAAAAAAAAmY/m7QIuXvKvFA/s1600/hd-gerard-joling-wallpaper-met-gerard-joling-in-een-wit-shirt-achtergrond-foto.jpg) no-repeat center center fixed; 
   background-size: cover;
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 a { 
