--- a/recourses/index.css
+++ b/recourses/index.css
@@ -2,7 +2,7 @@ html {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
-.home {
+#home {
   background: url(https://1.bp.blogspot.com/-j4GQ1pDOzOA/UDJ70bUbAeI/AAAAAAAAAmY/m7QIuXvKvFA/s1600/hd-gerard-joling-wallpaper-met-gerard-joling-in-een-wit-shirt-achtergrond-foto.jpg) no-repeat center center fixed; 
   background-size: cover;
 }
@@ -71,3 +71,11 @@ p {
 
 }
 
+@media only screen and (max-width: 480px) and (max-height: 480px) {
+  .content-container {
+    padding-left: 40px;
+  }
+  #home {
+    background-size: 480px 388px;
+  }
+}
