--- a/recourses/index.css
+++ b/recourses/index.css
@@ -104,3 +104,9 @@ width: 200px;
 h4 {
   text-align: left;
 }
+
+@media only screen and (max-width: 400px) {
+  .flex-container {
+    display: block;
+  }
+}
