--- a/recourses/index.css
+++ b/recourses/index.css
@@ -157,6 +157,8 @@ footer {
   background-color: black;
   color: white;
   text-align: right;
+  position: relative;
+  margin-top: 145px;
 }
 
 p {
